clusters/main/kubernetes/apps/gatus/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gatus
  namespace: gatus
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Endpoint monitoring
    gethomepage.dev/group: Default
    gethomepage.dev/icon: https://trueforge.org/img/hotlink-ok/chart-icons/gatus.webp
    gethomepage.dev/name: Gatus
    gethomepage.dev/widget.type: "gatus"
    gethomepage.dev/widget.url: http://gatus.gatus.svc.cluster.local:8080
    gethomepage.dev/instance: "internal"
spec:
  parentRefs:
    - name: envoy-internal
      namespace: envoy
      sectionName: https
  hostnames:
    - "gatus.${INGRESS_URL}"
  rules:
    - backendRefs:
        - name: gatus
          port: 8080
